package pt.isel.poo.powermap.model;


public interface CellListener {
    void draw(boolean on);
}
