package pt.isel.poo.powermap.model;


public enum State {
     UP,DOWN,LEFT,RIGHT
}
