package pt.isel.poo.powermap.view;


public interface PowerViewListener {
    void repaint(int x, int y, boolean on);
}
